--- a/01-variaveis-operadores/pratica02.html
+++ b/01-variaveis-operadores/pratica02.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="U-AX-Compatible" content="ie-edge">
-        <title>Exercício 02
-        </title>
+        <title>Prática 02</title>
     </head>
     <body>
         <h1>Lógica de Programação com JavaScript</h1>
