--- a/01-variaveis-operadores/aula04.html
+++ b/01-variaveis-operadores/aula04.html
@@ -4,22 +4,53 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="U-AX-Compatible" content="ie-edge">
-        <title>Lógica de Programação com JavaScript</title>
+        <title>Aula 04 - Lógica de Programação com JavaScript</title>
+        <style>
+            table{
+                font-family: Arial, sans-serif;
+                font-size: 1.2em;
+            }
+        </style>
     </head>
     <body>
         <h1>Lógica de Programação com JavaScript</h1>
         <h2>Aula 04 - Mais Operadores Aritméticos</h2>
 
-        <p>
-            <strong>+</strong> Adição<br>
-            <strong>-</strong> Subtração<br>
-            <strong>*</strong> Multiplicação<br>
-            <strong>/</strong> Divisão<br>
-            <strong>%</strong> Módulo<br>
-            <strong>**</strong> Exponenciação<br>
-            <strong>++</strong> Incremento<br>
-            <strong>--</strong> Decremento<br>
-        </p>
+        <table width="300">
+            <tr>
+                <td>+</td>
+                <td>Adição</td>
+            </tr>
+            <tr>
+                <td>-</td>
+                <td>Subtração
+                </td>
+            </tr>
+            <tr>
+                <td>*</td>
+                <td>Multiplicação</td>
+            </tr>
+            <tr>
+                <td>/</td>
+                <td>Divisão</td>
+            </tr>
+            <tr>
+                <td>%</td>
+                <td>Módulo (resto da divisão)</td>
+            </tr>
+            <tr>
+                <td>**</td>
+                <td>Exponenciação</td>
+            </tr>
+            <tr>
+                <td>++</td>
+                <td>Incremento</td>
+            </tr>
+            <tr>
+                <td>--</td>
+                <td>Decremento</td>
+            </tr>
+        </table>
 
         <script>
             
