--- a/01-variaveis-operadores/base.html
+++ b/01-variaveis-operadores/base.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="U-AX-Compatible" content="ie-edge">
-        <title>Lógica de Programação com JavaScript</title>
+        <title>Aula - Lógica de Programação com JavaScript</title>
     </head>
     <body>
         <h1>Lógica de Programação com JavaScript</h1>
+        <h2>Título da aula</h2>
 
         <script>
             
