--- a/01-variaveis-operadores/pratica04.html
+++ b/01-variaveis-operadores/pratica04.html
@@ -11,28 +11,25 @@
 
         <p>
             <strong>Problema:</strong><br>
-            <em>Pedir para o usuário digitar dois número e mostrar uma mensagem informando se foi aprovado ou não. <br>
+            <em>Pedir para o usuário digitar duas notas e mostrar uma mensagem informando se foi aprovado ou não. <br>
             A nota de corte é 5. <br>
             Contudo, se qualquer uma das notas for zero, reprova automaticamente.</em>
         </p>
 
-        <hr>
-
-        <h2>Controle de decisão</h2>
-        <p>
-            Se nota1 > 0 <span>E</span> nota2 > 0 <span>E</span> media > 5 <br>
-            mostra mensagem de <br>
-            parabéns
-        </p>
-        <p>
-            Senão <br>
-            mostra mensagem de <br>
-            reprovação
-        </p>
-
         <script>
             //entrada de dados
+            var nota1 = prompt('Digite a primeira nota: ');
+            nota1 = parseFloat(nota1);
+            var nota2 = prompt('Digite a segunda nota: ');
+            nota2 = parseFloat(nota2);
+            var media = (nota1 + nota2) / 2;
 
+            //se..
+            if(media <= 5 || nota1 === 0 || nota2 === 0){
+                alert('está REPROVADO!')
+            } else{
+                alert('está APROVADO!')
+            }
         </script>
     </body>
 </html>
