--- a/01-variaveis-operadores/exercicio06.html
+++ b/01-variaveis-operadores/exercicio06.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="U-AX-Compatible" content="ie-edge">
-        <title>Prática 05</title>
+        <title>Exercício 06</title>
     </head>
     <body>
         <h1>Lógica de Programação com JavaScript</h1>
