--- a/02-operadores-comparacao-logicos/aula01.html
+++ b/02-operadores-comparacao-logicos/aula01.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="U-AX-Compatible" content="ie-edge">
-        <title>Aula - Lógica de Programação com JavaScript</title>
+        <title>Lógica de Programação com JavaScript</title>
     </head>
     <body>
-        <h1>Lógica de Programação com JavaScript</h1>
-        <h2>Vamos resolver um problema?</h2>
+        <h1>Lógica de Programação: Operadores de comparação e lógicos</h1>
+        <h2>Aula 01 - Operadores de Comparação</h2>
+        <h3>Vamos resolver um problema?</h3>
         <p>
             Pedir para o usuário digitar dois números entre 0 e 10 e mostrar na tela um <strong>boolean</strong> indicando se o segundo número é maior ou igual ao primeiro.
         </p>
