--- a/05-arrays-objetos/aula01.html
+++ b/05-arrays-objetos/aula01.html
@@ -7,7 +7,7 @@
         <title>Aula - Lógica de Programação com JavaScript</title>
     </head>
     <body>
-        <h1>Lógica de Programação - Laços de Repetições</h1>
+        <h1>Lógica de Programação - Arrays e Objetos</h1>
         <h2>Aula 1 - Introdução à Arrays</h2>
         <h3>Vamos resolver um problema?</h3>
 
