--- a/05-arrays-objetos/aula02-1.html
+++ b/05-arrays-objetos/aula02-1.html
@@ -7,8 +7,8 @@
         <title>Aula - Lógica de Programação com JavaScript</title>
     </head>
     <body>
-        <h1>Lógica de Programação - Laços de Repetições</h1>
-        <h2>Aula 2 parte I - Como adicionar um elemento no fim da array - I</h2>
+        <h1>Lógica de Programação - Arrays e Objetos</h1>
+        <h2>Aula 2 - Arrays e Objetos</h2>
         <h3>Vamos resolver um problema?</h3>
 
         <p>
