--- a/05-arrays-objetos/exercicio06.html
+++ b/05-arrays-objetos/exercicio06.html
@@ -10,18 +10,20 @@
         <h1>Lógica de Programação com JavaScript</h1>
         <p><strong>Exercício Proposto:</strong></p>
         <p>
-            Dado um array contendo os dias da semana, mostre em alert qual é o dia atual.
+            Dado um array qualquer, mostre em um alert um boolean indicando se encontrou um dos seguintes valores nesse array: null, undefined ou NaN.
         </p>
         <hr>
         <br>
 
         <script>
-            const semana = ["Domingo", "Segunda-feira", "Terça-feira", "Quarta-feira", "Quinta-feira", "Sexta-feira", "Sábado"]
-
-            const hoje = new Date() //os 7 dias da semana (0, 1, 2, 3...)
-            const diaSemana = hoje.getDay()  //pega o dia de hoje (sabado = 7)
-            alert(diaSemana)
-            alert('Hoje é ' + semana[diaSemana])  //msg exibindo o dia de hoje
+            const nums = [8, 5, 9, NaN, 4, 10, 38, 11, 6, 8, 0, 25, 7]
+            let val = false
+            for(i = 0; i < nums.length; i++){
+                if(nums[i] === null || nums[i] === undefined || isNaN(nums[i])){
+                    val = true
+                }
+            }
+            alert('encontrou um Null ou um Undefined ou um NaN? ' + val)
         </script>
 
     </body>
