--- a/05-arrays-objetos/exercicio07.html
+++ b/05-arrays-objetos/exercicio07.html
@@ -10,18 +10,18 @@
         <h1>Lógica de Programação com JavaScript</h1>
         <p><strong>Exercício Proposto:</strong></p>
         <p>
-            Dado um array contendo os dias da semana, mostre em alert qual é o dia atual.
+            Dado um array de nomes, mostre na tela todos os nomes de trás para frente (o último item do array é o primeiro da página)
         </p>
         <hr>
         <br>
 
         <script>
-            const semana = ["Domingo", "Segunda-feira", "Terça-feira", "Quarta-feira", "Quinta-feira", "Sexta-feira", "Sábado"]
-
-            const hoje = new Date() //os 7 dias da semana (0, 1, 2, 3...)
-            const diaSemana = hoje.getDay()  //pega o dia de hoje (sabado = 7)
-            alert(diaSemana)
-            alert('Hoje é ' + semana[diaSemana])  //msg exibindo o dia de hoje
+            const nomes = ['José', 'João Pedro', 'Arthur', 'Elma', 'Klaudio', 'Otávio', 'Bento']
+            
+            for(let i = nomes.length - 1; i >= 0; i--){
+                document.write(nomes[i] + '<br>')
+            }
+            //alert('encontrou um Null ou um Undefined ou um NaN? ' + val)
         </script>
 
     </body>
