--- a/06-introducao-dom/aula04-textContent-vs-innerHTML.html
+++ b/06-introducao-dom/aula04-textContent-vs-innerHTML.html
@@ -5,17 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="U-AX-Compatible" content="ie-edge">
         <title>Aula - Lógica de Programação com JavaScript</title>
-
-
-        /*
-            Nomalmente o código script JS é chamado no final da página html, para evitar erros de execução de código antes do elemento ser criado.
-            Mas podemos inserir o código script no topo da página html se utilizarmos o atributo DEFER. Lembrete, o DEFER só funciona quando usamos um código script externo, como no exemplo abaixo.
-        */
-        <script defer src="aula03-inserir-javascript.js"></script>
     </head>
     <body>
         <h1>Lógica de Programação - Introdução ao D.O.M.</h1>
-        <h2>Aula 2 - DOM - Recuperar um valor no Input</h2>
+        <h2>Aula 4 - DOM - textContent vs innerHTML</h2>
         
         <h3 id="titulo">Outro título qualquer</h3>
         <p id="paragrafo">
@@ -24,5 +17,9 @@
 
         <input type="text" id="user" value="seu nome">
         
+        <script>
+            let par = document.getElementById('paragrafo')
+            par.innerHTML = 'Mundando completamente o texto usando o <strong>innerHTML</strong> ao invés do <em>textContent<em>.'
+        </script>
     </body>
 </html>
