--- a/06-introducao-dom/aula05-add-conteudo-sem-substituir.html
+++ b/06-introducao-dom/aula05-add-conteudo-sem-substituir.html
@@ -5,17 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="U-AX-Compatible" content="ie-edge">
         <title>Aula - Lógica de Programação com JavaScript</title>
-
-
-        /*
-            Nomalmente o código script JS é chamado no final da página html, para evitar erros de execução de código antes do elemento ser criado.
-            Mas podemos inserir o código script no topo da página html se utilizarmos o atributo DEFER. Lembrete, o DEFER só funciona quando usamos um código script externo, como no exemplo abaixo.
-        */
-        <script defer src="aula03-inserir-javascript.js"></script>
     </head>
     <body>
         <h1>Lógica de Programação - Introdução ao D.O.M.</h1>
-        <h2>Aula 2 - DOM - Recuperar um valor no Input</h2>
+        <h2>Aula 5 - DOM - Adicionar conteúdo sem substituí-lo.</h2>
         
         <h3 id="titulo">Outro título qualquer</h3>
         <p id="paragrafo">
@@ -23,6 +16,21 @@
         </p>
 
         <input type="text" id="user" value="seu nome">
+
+        <hr>
+        <h2>Lista de tarefas:</h2>
+        <ul id="listaTarefas">
+            <li>Aprender CSS</li>
+            <li>Aprender JavaScript</li>
+            <li>Aprender DOM profundamente</li>
+            <li>Criar algo</li>
+        </ul>
         
+        <script>
+            const lista = document.getElementById('listaTarefas')
+            let novaTarefa = 'Aplicar à vagas de emprego'
+            //lista.innerHTML = lista.innerHTML + '<li>' + novaTarefa + '</i>'
+            lista.innerHTML += '<li>' + novaTarefa + '</i>'
+        </script>
     </body>
 </html>
