--- a/secao 13 estruturas de dados 1/05-filas.html
+++ b/secao 13 estruturas de dados 1/05-filas.html
@@ -100,7 +100,7 @@
             try{
                 minhaFila.enfileirar('Sexto')              //
             }catch(e){
-                console.log(e.message)
+                console.log('ERRO: ', e.message)
             }
 
             
